projetos/local/nexus-adm/nexus-adm-api/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-cert-ref
  namespace: nexus-adm-api
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: nexus-adm-webapp
  to:
  - group: ""
    kind: Secret
